<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".InsertAlarmclockActivity">

    <TextView
        android:id="@+id/text_id_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#555555" />

    <TextView
        android:id="@+id/text_firebaseId_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#555555"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_createTime_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#555555"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#444444"
        android:textColor="@color/black"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/text_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/detail"
        android:textColorHint="#444444"
        android:textColor="@color/black"
        android:inputType="textMultiLine"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintBottom_toTopOf="@id/insert_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/text_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/delay_second"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/insert_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/insert_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/insert_submit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/insert_submit_button" />

    <Button
        android:id="@+id/insert_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Switch
        android:id="@+id/insert_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pinned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/insert_submit_button"
        app:layout_constraintTop_toTopOf="@+id/insert_submit_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>